kubernetes/infrastructure/adguard/adguard-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: web
      port: 80
      targetPort: 80
