kubernetes/infrastructure/adguard/adguard-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-web
  namespace: adguard
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "adguard.skuxnet"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: adguard-web
          port: 80
